--- a/Mashup/Views/TrafficMessages/Index.cshtml
+++ b/Mashup/Views/TrafficMessages/Index.cshtml
@@ -1,14 +1,11 @@
 ﻿@model IEnumerable<Mashup.Models.TrafficMessage>
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "trafikmeddelanden";
 }
 
-<h2>Index</h2>
+<h2>Trafikmeddelanden</h2>
 
-<p>
-    @Html.ActionLink("Create New", "Create")
-</p>
 <table class="table">
     <tr>
         <th>
@@ -69,11 +66,6 @@
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.SubCategory)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.id }) |
-            @Html.ActionLink("Details", "Details", new { id=item.id }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.id })
         </td>
     </tr>
 }
