--- a/Mashup/Views/Shared/_Layout.cshtml
+++ b/Mashup/Views/Shared/_Layout.cshtml
@@ -4,31 +4,12 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>@ViewBag.Title - My ASP.NET Application</title>
-    @Styles.Render("~/Content/css")
-    @Scripts.Render("~/bundles/modernizr")
+    
 </head>
-<body>
-    <div class="navbar navbar-inverse navbar-fixed-top">
-        <div class="container">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                @Html.ActionLink("Application name", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
-            </div>
-            <div class="navbar-collapse collapse">
-                <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                    <li>@Html.ActionLink("About", "About", "Home")</li>
-                    <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
-                </ul>
-            </div>
-        </div>
-    </div>
+<body onload="GetMap();">
     <div class="container body-content">
         @RenderBody()
+        <div id='mapDiv' style="position:absolute; width:400px; height:400px;"></div>
         <hr />
         <footer>
             <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
@@ -40,3 +21,12 @@
     @RenderSection("scripts", required: false)
 </body>
 </html>
+@Styles.Render("~/Content/css")
+@Scripts.Render("~/bundles/modernizr")
+<script type="text/javascript" src="http://ecn.dev.virtualearth.net/mapcontrol/mapcontrol.ashx?v=7.0"></script>
+<script type="text/javascript">
+    function GetMap() {
+        var map = new Microsoft.Maps.Map(document.getElementById("mapDiv"), { credentials: "Ar7yrfT4Hux1-O7311-MEO-utjJJKIpiZbUwuZsxA3KhUU-UT5Oisz1kmxE9EnOQ" });
+        //map.focus.
+    }
+</script>
