--- a/Mashup/Views/TrafficMessages/Index.cshtml
+++ b/Mashup/Views/TrafficMessages/Index.cshtml
@@ -3,8 +3,30 @@
 @{
     ViewBag.Title = "trafikmeddelanden";
 }
-
 <h2>Trafikmeddelanden</h2>
+<script src="http://maps.google.com/maps/api/js?sensor=true" type="text/javascript"></script>
+
+<!-- This is the div that will contain the Google Map -->
+<div id="map_canvas"></div>
+@section scripts {
+    <section class="scripts">
+        <script type="text/javascript">
+             //This code tells the browser to execute the "Initialize" method only when the complete document model has been loaded.
+                $(document).ready(function () {
+                    Initialize();
+                });
+                
+                function Initialize() {
+
+
+                }
+            
+
+
+        </script>
+    </section>
+
+
 
 <table class="table">
     <tr>
@@ -71,3 +93,4 @@
 }
 
 </table>
+
