Markers on the map, clickable, shows popup, zoom-property of google map must be integer(lost 7 hours on that)

--- a/Mashup/Content/Style.css
+++ b/Mashup/Content/Style.css
@@ -1,10 +1,6 @@
 ﻿ /*This css is to ensure that the google map contols (zoom bar etc) show and size correctly. */
 
-#map_canvas img
-     {
-      max-width:none
-
-     }
+#map_canvas img{max-width:none}
 
 /* This css is to give a nice big popup "info window" when a marker is clicked on the map */
     .infoDiv {
