--- a/Mashup/Views/Shared/_Layout.cshtml
+++ b/Mashup/Views/Shared/_Layout.cshtml
@@ -6,9 +6,11 @@
 
     <title>@ViewBag.Title - My ASP.NET Application</title>
     @Styles.Render("~/Content/Style.css")
+    
 </head>
 <body>
     <div class="container body-content">
+        @RenderSection("featured", required: false)
         <section class="content-wrapper main-content clear-fix">
             @RenderBody()
         </section>
@@ -17,14 +19,12 @@
             <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
         </footer>
     </div>
-
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
-    @Scripts.Render("~/bundles/Maps")
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
     @RenderSection("scripts", required: false)
-    
+
 </body>
 </html>
 
