--- a/Mashup/Content/bootstrap.css
+++ b/Mashup/Content/bootstrap.css
@@ -42,6 +42,21 @@ audio:not([controls]) {
 template {
   display: none;
 }
+/* This css is to give a nice big popup "info window" when a marker is clicked on the map */
+    .infoDiv {
+    border-radius: 25px;
+    border: 2px solid #337ab7;
+    padding: 20px; 
+    width: 200px;
+    height: 150px; 
+    font-size:0.8em;
+    background-color:#faf6a3;
+    opacity:0.8;
+    height: 100px;    
+    width: 200px; 
+    -webkit-user-select: none; 
+    background-color:#a0c7d7; 
+    }
 a {
   background-color: transparent;
 }
