--- a/Mashup/Views/TrafficMessages/Index.cshtml
+++ b/Mashup/Views/TrafficMessages/Index.cshtml
@@ -1,140 +1,64 @@
 ﻿@using Newtonsoft.Json
-@model IEnumerable<Mashup.Models.TrafficMessage>
+@using System.Web.Mvc.Html
+@model Mashup.ViewModels.TrafficMessageViewModel
 
 @{
-    ViewBag.Title = "trafikmeddelanden";
+    ViewBag.Title = "Index";
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
-
-<h2>Trafikmeddelanden</h2>
-
 
 @section scripts {
-
-<section class="scripts">
-    <script type="text/javascript" src="http://maps.google.com/maps/api/js"></script> 
-    
-
-    <script type="text/javascript">
-   
-    var data = @Html.Raw(JsonConvert.SerializeObject(Model))
-
-    $(document).ready(function () {
-        Initialize(data);
-    });
-
-    function Initialize(data) {
-
-        google.maps.visualRefresh = true;
-        //var result = JSON.parse(data);
-        //var Sweden = new google.maps.LatLng(result["latitude"],result["longitude"]); //61.02, 14.38);
-        var Sweden = new google.maps.LatLng(61.02, 14.38);
-
-        var mapOptions = {
-            zoom: 5,
-            center: {lat: 61.39, lng: 15.35},
-            mapTypeId: google.maps.MapTypeId.ROADMAP,
-        };
-
-        // This makes the div with id "map_canvas" a google map
-        var map = new google.maps.Map(document.getElementById("map_canvas"), mapOptions);
-
-        // This shows adding a simple pin "marker" - this happens to be the Tate Gallery in Liverpool!
-        //var myLatlng = new google.maps.LatLng(61.02, 14.38);
-
-        //console.log(data);
-        $.each(data, function (i, item) {
-            var marker = new google.maps.Marker({
-                position: new google.maps.LatLng(item["Latitude"], item["Longitude"]),
-                map: map,
-                title: item['title']
+    <section class="scripts">
+        <script type="text/javascript" src="http://maps.google.com/maps/api/js"></script>
+        <script type="text/javascript">
+            var data = @Html.Raw(JsonConvert.SerializeObject(Model.trafficmessages));
+            $(document).ready(function () {
+                Initialize(data);
             });
-
-
-            // You can make markers different colors...  google it up!
-            marker.setIcon('http://maps.google.com/mapfiles/ms/icons/green-dot.png')
-
-            // put in some information about each json object 
-            var infowindow = new google.maps.InfoWindow({
-                content: "<div class='infoDiv'><h2>" + item["ExactLocation"] + "</h2>" + "<div><h4>Tid: " + item["CreatedDate"] + "</h4></div></div>"
-            });
-
-            // finally hook up an "OnClick" listener to the map so it pops up out info-window when the marker-pin is clicked!
-            google.maps.event.addListener(marker, 'click', function () {
-                infowindow.open(map, marker);
-            });
-        })
-    }
-</script>
-</section>
+    </script>
+    </section>
 }
 
-<!-- This is the div that will contain the Google Map -->
-<div id="map_canvas" style="height: 800px;"></div>
-
-<table class="table">
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.priority)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.CreatedDate)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Title)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.ExactLocation)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Description)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Latitude)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Longitude)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Category)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.SubCategory)
-        </th>
-        <th></th>
-    </tr>
-
-    @foreach (var item in Model)
+<!-- begin template -->
+<div class="container-fluid" id="main">
+    <div class="row">
+        <div class="col-xs-8" id="left">
+            <h2> Aktuell Trafikinformation</h2>
+            <h6> Webbapplikation visar den trafikinformation som Sveriges Radio presenterar och plottrar ut de positioner som hör till varje trafikmeddelande.</h6>
+            <hr />
+            <div >
+                <p>         
+                     @using (Html.BeginForm())
+                     {
+                        @Html.DropDownListFor(m => m.categories, new SelectList(Model.categories, "Value", "Text"), "-- Välj en kategori --", new { @onchange = "this.form.submit();", @class = "dropdown" })
+                    }
+                </p>
+            </div>
+            <hr />
+@foreach (var item in Model.trafficmessages)
     {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.priority)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.CreatedDate)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Title)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.ExactLocation)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Description)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Latitude)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Longitude)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Category)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.SubCategory)
-            </td>
-        </tr>
+            <!-- item list -->
+            <div class="panel panel-default">
+                <div class="panel-heading"><a id="traffic" href=# onclick="myClick(@item.id);">@Html.DisplayFor(modelItem => item.Title) <strong>Tid: </strong>@Html.DisplayFor(modelItem => item.CreatedDate) </a></div>
+            </div>
+            <p>
+                <strong>Exakt läge: </strong>@Html.DisplayFor(modelItem => item.ExactLocation)<br />
+                <strong>Kategori: </strong>@Html.DisplayFor(modelItem => item.SubCategory)<br />
+                <strong>Prioritet: </strong>@Html.DisplayFor(modelItem => item.priority)<br />
+                <strong>Beskrivning: </strong>@Html.DisplayFor(modelItem => item.Description)<br />        
+            </p>
+            <hr>
+            <!-- /item list -->
     }
+            <p>
+                <a href="https://github.com/jb223cp/1dv449_jb223cp_lab3" target="_ext" class="center-block btn btn-primary">Länk till projektets GitHub</a>
+            </p>
+            <hr>
+        </div>
+        <div class="col-xs-4">
+            <div id="map-canvas" style="height: 750px; width:730px;"></div>
+        </div>
 
-</table>
-
+    </div>
+</div>
+<!-- end template -->
